--- a/styles.css
+++ b/styles.css
@@ -185,6 +185,7 @@ body::before {
     display: flex;
     flex-direction: column;
     align-items: center;
+    margin-left: -14px;
     margin-top: auto;
     margin-bottom: 40px;
     width: 100%;
